# assignment-for-sam

./: README.md  app.py  data.csv  generate_vectors.py  pyproject.toml  vector_database.pkl
